--- a/pom.xml
+++ b/pom.xml
@@ -100,7 +100,13 @@
 			<artifactId>easyexcel</artifactId>
 			<version>2.2.8</version>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>RELEASE</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
 
 	<build>
 		<plugins>
